@@ -32,11 +32,18 @@ uqm_requirements()
 
 
 	# Add defines for HAVE_READDIR_R, HAVE_SETENV, HAVE_STRUPR,
-	# and HAVE_STRICMP
+	# HAVE_STRCASECMP, and HAVE_STRICMP
 	define_have_symbol readdir_r
 	define_have_symbol setenv
 	define_have_symbol strupr
+	define_have_symbol strcasecmp
 	define_have_symbol stricmp
+
+	# Require either strcasecmp or stricmp.
+	if not have_symbol strcasecmp && not have_symbol stricmp; then
+		echo "Fatal: Your system defines neither strcasecmp() nor stricmp()."
+		exit 1
+	fi
 	
 	# Add defines for HAVE_ISWGRAPH, HAVE_WCHAR_T, and HAVE_WINT_T
 	define_have_symbol iswgraph
@@ -191,13 +198,13 @@ uqm_prepare_config()
 		OGGVORBIS=tremor
 		use_library tremor
 	}
-	CHOICE_ovcodec_DEFAULT=standard
 	CHOICE_ovcodec_OPTION_none_TITLE="No Ogg Vorbis support"
 	CHOICE_ovcodec_OPTION_none_ACTION=ovcodec_none_action
 	ovcodec_none_action() {
 		CFLAGS="$CFLAGS -DOVCODEC_NONE"
 		OGGVORBIS=none
 	}
+	CHOICE_ovcodec_DEFAULT=standard
 
 	CHOICE_mikmod_OPTIONS="internal external"
 	CHOICE_mikmod_TITLE="Tracker music support"
