@@ -243,6 +243,10 @@ SYMBOL_readdir_r_EXTRA="#include <dirent.h>"
 
 SYMBOL_setenv_EXTRA="#include <stdlib.h>"
 
+SYMBOL_strcasecmp_EXTRA="#include <string.h>"
+SYMBOL_strcasecmp_DEFNAME="HAVE_STRCASECMP_UQM"
+		# HAVE_STRCASECMP would conflict with SDL (SDL_config.h).
+
 SYMBOL_stricmp_EXTRA="#include <string.h>"
 
 SYMBOL_strupr_EXTRA="#include <string.h>"
