@@ -38,6 +38,10 @@
 /* Defined if your system has strupr of its own */
 #define HAVE_STRUPR
 
+/* Defined if your system has strcasecmp of its own */
+#undef HAVE_STRCASECMP_UQM
+		// Not using "HAVE_STRCASECMP" as that conflicts with SDL.
+
 /* Defined if your system has stricmp of its own */
 #define HAVE_STRICMP
 
